# trading-backtest-platform

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  .gitleaksignore  .mcp.json  .trivyignore  AGENTS.md  CANLIYA_ALMA_REHBERI.md  CHROME_QA_EKSIKLER_RAPORU.md  CLAUDE.md  DEPLOY_FIXES.md  Dockerfile.workers  FRONTEND_QA_RAPORU.md  HANDOFF_PROMPT.md  ILERLEME.md  KISISEL_VERI_ENVANTERI.md  MASTER_PLAN_v2.md  Makefile  PROJE_DURUM_OZET.md  README.md  ROADMAP.md  SEN_YAPACAKSIN.md  WEB_UX_TEST_RAPORU.md  YAPILACAKLAR.md  YAPILACAKLAR_YASAL_UYUM.md  YAPILANLAR.md  arayuz.md  demo.py  docker-compose.monitor.yml  docker-compose.yml  egitimplanlama.md  genelplanlama.md  hata-duzeltme-plani.md  index.html  live_server.py  mentorplan.md  nginx.conf  ogrenilenler.md  (+17 more)
.claude/: settings.json
.codex/: config.toml  hooks.json
.streamlit/: config.toml
backend/: __init__.py  config.py  env_validator.py  requirements.txt
config/: settings.toml
db/: audit_log.db  audit_log.db-journal
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.notifier  Dockerfile.workers  docker-compose.prod.yml  nginx.bootstrap.conf  nginx.conf  nginx.https.example.conf  nginx.local.conf  nginx.prod.conf  prometheus.yml  prometheus_alerts.yml
docs/: AGENT_REHBERI.md  API.md  ARCHITECTURE.md  BACKFILL_RUNBOOK.md  BORFIN_OCR_ENVANTERI.md  DEPLOYMENT.md  MIMARI.md  SECURITY.md  SKILL_REHBERI.md  UML.md  VERI_KATALOGU.md  VERI_MIMARISI.md  YAPILACAKLAR.md  YAPILANLAR.md  ogrenilenler.md
frontend/: CHANGELOG.md  README.md  index.html  package-lock.json  style.css  (+4 more)
(+669 files in other folders)
