[project]
name = "quant-engine"
version = "0.1.0"
description = "VİOP/BIST Algoritmik Trading ve Yüksek Hızlı Backtest Motoru"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: uzun süren testler",
    "network: internet gerektiren testler",
]
